Corrected display of the mode grid (each tab being styled separately, and on mobile scroll bar only for the tab and not for the grid)

--- a/src/css/modes.css
+++ b/src/css/modes.css
@@ -1,6 +1,6 @@
 /*CSS for the modes page*/
 
-#mode-grid {
+.mode-grid {
 	display: grid;
 	width: 90%;
 	height: 60%;
@@ -9,10 +9,17 @@
 	padding:2%;
 	margin-top: max(12vh, 92px);
 	grid-template-columns: repeat(3, 25%);
-	grid-template-rows: repeat(1, minmax(192px, 25vh));
 	grid-column-gap: 8%;
-	grid-row-gap: 6%;
+	grid-row-gap: 3%;
 	overflow-y: scroll;
+}
+
+#mode-grid-default {
+	grid-template-rows: repeat(10, minmax(192px, 25vh));
+}
+
+#mode-grid-custom {
+	grid-template-rows: repeat(10, minmax(192px, 25vh));
 }
 
 .mode-sub-grid {
@@ -32,7 +39,7 @@
 	background-color: #0D0828;
 	color:#FEEDDF;
 	justify-self:center;
-	margin-bottom: 20%;
+	/*margin-bottom: 20%;*/
 }
 
 .mode-text p {
@@ -153,12 +160,23 @@
 
 
 @media only screen and (max-width:930px) and (any-hover: none) {
-	#mode-grid {
-		height: 100%;
+	.mode-grid {
+		min-height: 100%;
 		margin-top: max(2.5vh, 20px);
 		grid-template-columns: repeat(2, 46%);
+		grid-template-rows:repeat(10, minmax(150px, 25vh));
 		grid-column-gap: 6%;
+		overflow-y: visible;
 	}
+
+	#mode-grid-default {
+		grid-template-rows: repeat(10, minmax(150px, 25vh));
+	}
+
+	#mode-grid-custom {
+		grid-template-rows: repeat(10, minmax(150px, 25vh));
+	}
+
 
 	.react-tabs {
 		height: calc(max(79vh, 460px) - max(2.5vh, 20px));
